fixing votes section mobile

--- a/src/css/_shares.scss
+++ b/src/css/_shares.scss
@@ -187,8 +187,10 @@
 }
 
 .undo-vote {
+  width: 100%;
 
   @include media($mobile) {
+    width: 5.5em;
     position: absolute;
     top: 0;
     bottom: 0;
